fix for bug #14832: basename with 2nd parm corrupts source string